CHANGE from misc.sun.BASE64Encoder to java.util.base64