@@ -4,6 +4,8 @@ package org.owasp.webgoat.lessons;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.Base64.Encoder;
+import java.util.Base64;
 import java.security.MessageDigest;
 import javax.servlet.http.HttpServletResponse;
 import org.apache.ecs.Element;
@@ -17,34 +19,32 @@ import org.apache.ecs.html.TD;
 import org.apache.ecs.html.TR;
 import org.apache.ecs.html.Table;
 import org.owasp.webgoat.session.WebSession;
-import sun.misc.BASE64Encoder;
-
 
 /***************************************************************************************************
- * 
- * 
+ *
+ *
  * This file is part of WebGoat, an Open Web Application Security Project utility. For details,
  * please see http://www.owasp.org/
- * 
+ *
  * Copyright (c) 2002 - 20014 Bruce Mayhew
- * 
+ *
  * This program is free software; you can redistribute it and/or modify it under the terms of the
  * GNU General Public License as published by the Free Software Foundation; either version 2 of the
  * License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License along with this program; if
  * not, write to the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
  * 02111-1307, USA.
- * 
+ *
  * Getting Source ==============
- * 
+ *
  * Source for this application is maintained at https://github.com/WebGoat/WebGoat, a repository for free software
  * projects.
- * 
+ *
  * For details, please see http://webgoat.github.io
  */
 public class HttpOnly extends LessonAdapter
@@ -81,7 +81,7 @@ public class HttpOnly extends LessonAdapter
 
     /**
      * Gets the title attribute of the EmailScreen object
-     * 
+     *
      * @return The title value
      */
     public String getTitle()
@@ -96,7 +96,7 @@ public class HttpOnly extends LessonAdapter
 
     /**
      * Description of the Method
-     * 
+     *
      * @param s
      *            Description of the Parameter
      * @return Description of the Return Value
@@ -157,7 +157,7 @@ public class HttpOnly extends LessonAdapter
 
     /**
      * DOCUMENT ME!
-     * 
+     *
      * @return DOCUMENT ME!
      */
     protected Category getDefaultCategory()
@@ -167,7 +167,7 @@ public class HttpOnly extends LessonAdapter
 
     /**
      * Gets the hints attribute of the EmailScreen object
-     * 
+     *
      * @return The hints value
      */
     protected List<String> getHints(WebSession s)
@@ -182,7 +182,7 @@ public class HttpOnly extends LessonAdapter
         String value = null;
         byte[] buffer = null;
         MessageDigest md = null;
-        BASE64Encoder encoder = new BASE64Encoder();
+        Encoder encoder = Base64.getEncoder();
 
         try
         {
@@ -190,7 +190,7 @@ public class HttpOnly extends LessonAdapter
             buffer = new Date().toString().getBytes();
 
             md.update(buffer);
-            value = encoder.encode(md.digest());
+            value = encoder.encode(md.digest()).toString();
             original = value;
 
         } catch (Exception e)
